--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,12 @@
 - type: github
   icon: "fab fa-github"
 
-- type: twitter
-  icon: "fa-brands fa-x-twitter"
+- type: tiktok
+  icon: 'fa-brands fa-tiktok'
+  url: 'https://www.tiktok.com/@proverbialpursuits'                   # Fill with your TikTok profile link
+
+# - type: twitter
+  # icon: "fa-brands fa-x-twitter"
 
 - type: email
   icon: "fas fa-envelope"
@@ -38,3 +42,11 @@
 # - type: threads
 #   icon: 'fa-brands fa-threads'
 #   url: ''                   # Fill with your Threads profile link
+
+# - type: youtube
+#   icon: 'fa-brands fa-youtube'
+#   url: ''                   # Fill with your YouTube channel link
+#
+# - type: vimeo
+#   icon: 'fa-brands fa-vimeo'
+#   url: ''                   # Fill with your Vimeo profile link
